# backend/docs/swagger.json
@@ -18,11 +18,6 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
                 "description": "Login to app",
                 "consumes": [
                     "application/json"
